tmp hidden remove

--- a/src/Thumbtack/OfflinerBundle/Resources/views/Default/welcome.html.twig
+++ b/src/Thumbtack/OfflinerBundle/Resources/views/Default/welcome.html.twig
@@ -22,7 +22,7 @@
                     <span class="icon icon-wf ">&#128240;</span>
                     Profile
                 </tab-heading>
-                <div class="loading hidden"><p>In w<span class="rotateO"></span>rk</p></div>
+                <div class="loading"><p>In w<span class="rotateO"></span>rk</p></div>
                 <div>
                     <div class="panel">
                     {% endverbatim %}
