selected tab saving

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -50,6 +50,7 @@
 <script src="{{ asset('assets/js/mainApp.js') }}"></script>
 <script src="{{ asset('assets/js/indexerApp.js') }}"></script>
 <script src="{{ asset('assets/js/offlinerApp.js') }}"></script>
+<script src="{{ asset('assets/js/libs/angular-cookies.min.js') }}"></script>
 {% block javascripts %}{% endblock %}
 </body>
 </html>
