--- a/src/Thumbtack/OfflinerBundle/Resources/views/Default/welcome.html.twig
+++ b/src/Thumbtack/OfflinerBundle/Resources/views/Default/welcome.html.twig
@@ -15,9 +15,8 @@
 {% block data %}
     {% verbatim %}
     <div class="row-fluid">
-        <tabset class="tabbable tabs-left">
-         <input id='active_tab' ng-show="false" ng-model="active_tab.selected"/>
-            <tab select="tabActive();">
+        <tabset class="tabbable tabs-left" ng-controller = "tabsCtrl">
+            <tab select="tabSelect('profile');">
                 <tab-heading id="profile">
                     <span class="icon icon-wf ">&#128240;</span>
                     Profile
@@ -32,7 +31,7 @@
 
                 </div>
             </tab>
-            <tab select="tabActive();">
+            <tab select="tabSelect('offliner');" active="tabs.offliner">
                 <tab-heading id="offliner">
                     <span style="float: right; vertical-align:top;font-size: 100%;color: red;">beta</span>
                     <span class="icon icon-wf ">&#59198;</span>
@@ -104,7 +103,7 @@
                     </table>
                 </div>
             </tab>
-            <tab>
+            <tab select="tabSelect('indexer');" active="tabs.indexer">
                 <tab-heading id="indexer">
                     <span class="icon icon-wf ">&#128213;</span>
                     Indexer service
@@ -149,7 +148,7 @@
                     <div class="page-content" compile="result"></div>
                 </div>
             </tab>
-            <tab>
+            <tab select="tabSelect('search');" active="tabs.search">
                 <tab-heading id="search">
                     <span class="icon icon-wf ">&#9881;</span>
                     Indexer search test
@@ -201,49 +200,14 @@
 <script>
     //logout action simple realization
     window.onload = function(){
-
-        active = document.getElementById('active_tab');
-        active.value = readCookie('service');
-
         tabs = document.getElementsByTagName('tab-heading');
         for(var key in tabs){
-            if(tabs[key].parentNode){
-                tabs[key].parentNode.onclick = function(){
-                    createCookie( 'service',  this.children[0].id);
-                };
-            }
             if(tabs[key].id == 'logout'){
                 tabs[key].parentNode.onclick = function(){
                     window.location = window.location + "logout";
                 }
             }
         }
-    }
-    // You should also use some cross-browser cookie functions that make your life a lot easier
-    // function taken from: http://www.quirksmode.org/js/cookies.html
-    function createCookie(name,value,days) {
-        if (days) {
-            var date = new Date();
-            date.setTime(date.getTime()+(days*24*60*60*1000));
-            var expires = "; expires="+date.toGMTString();
-        }
-        else var expires = "";
-        document.cookie = name+"="+value+expires+"; path=/";
-    }
-
-    function readCookie(name) {
-        var nameEQ = name + "=";
-        var ca = document.cookie.split(';');
-        for(var i=0;i < ca.length;i++) {
-            var c = ca[i];
-            while (c.charAt(0)==' ') c = c.substring(1,c.length);
-            if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
-        }
-        return null;
-    }
-
-    function eraseCookie(name) {
-        createCookie(name,"",-1);
     }
 </script>
 {% endblock %}
