--- a/web/assets/css/offliner.css
+++ b/web/assets/css/offliner.css
@@ -60,7 +60,9 @@ a span.icon:hover{
         padding: 5px 20px 0px 20px;
     }
 }
-
+[ng\:cloak], [ng-cloak], .ng-cloak {
+    display: none !important;
+}
 .loading{
     position: fixed;
     left: 141px;
@@ -70,6 +72,20 @@ a span.icon:hover{
     z-index: 9999;
     width: 100%;
     height: 100%;
+    text-align: center;
+    font-size: 150px;
+}
+.cloak{
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    padding-top: 10%;
+    background-color: rgba(0,0,0,1);
+    opacity: 1;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    color: #fff;
     text-align: center;
     font-size: 150px;
 }
