--- a/web/assets/css/offlinerSignIn.css
+++ b/web/assets/css/offlinerSignIn.css
@@ -56,6 +56,9 @@ body{
     }
 }
 
+[ng\:cloak], [ng-cloak], .ng-cloak {
+    display: none !important;
+}
 .loading{
     position: fixed;
     left: 0px;
@@ -65,6 +68,20 @@ body{
     z-index: 9999;
     width: 100%;
     height: 100%;
+    text-align: center;
+    font-size: 150px;
+}
+.cloak{
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    padding-top: 10%;
+    background-color: rgba(0,0,0,1);
+    opacity: 1;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    color: #fff;
     text-align: center;
     font-size: 150px;
 }
