status 204 can not have a body =(

--- a/src/Thumbtack/OfflinerBundle/Resources/views/Default/welcome.html.twig
+++ b/src/Thumbtack/OfflinerBundle/Resources/views/Default/welcome.html.twig
@@ -190,7 +190,8 @@
                 <tab-heading id="logout">
                     Logout
                 </tab-heading>
-                <a href="logout"><h1>Logging out... click here if you read this</h1></a>
+                <a href="logout"><h1 style="padding: 10%">Logging out... click here if you read this</h1></a>
+
             </tab>
         </tabset>
     </div>
