--- a/src/Thumbtack/OfflinerBundle/Resources/views/Default/welcome.html.twig
+++ b/src/Thumbtack/OfflinerBundle/Resources/views/Default/welcome.html.twig
@@ -16,22 +16,7 @@
     {% verbatim %}
     <div class="row-fluid">
         <tabset class="tabbable tabs-left" ng-controller = "tabsCtrl">
-            <tab select="tabSelect('profile');">
-                <tab-heading id="profile">
-                    <span class="icon icon-wf ">&#128240;</span>
-                    Profile
-                </tab-heading>
-                <div class="loading"><p>In w<span class="rotateO"></span>rk</p></div>
-                <div>
-                    <div class="panel">
-                    {% endverbatim %}
-                    You are logged-in as <span class="username">{{ app.user.nickname }}</span>, manage your api keys and info below</a>.
-                    {% verbatim %}
-                    </div>
-
-                </div>
-            </tab>
-            <tab select="tabSelect('offliner');" active="tabs.offliner">
+            <tab select="tabSelect('offliner');" >
                 <tab-heading id="offliner">
                     <span style="float: right; vertical-align:top;font-size: 100%;color: red;">beta</span>
                     <span class="icon icon-wf ">&#59198;</span>
@@ -141,6 +126,9 @@
                                 <label class="btn btn-danger pull-right" ng-click="sendRequest('deleteDomain',{{domain.id}})" title="Delete">
                                     <span class="icon icon-wf icon-action">&#59177;</span>
                                 </label>
+                                <label class="btn btn-info pull-right" ng-click="sendRequest('getDomainInfo',{{domain.id}},{{ domain}})" title="Info">
+                                    <span class="icon icon-wf icon-action">&#128196;</span>
+                                </label>
                             </td>
                         </tr>
                         </tbody>
@@ -183,6 +171,20 @@
                             </li>
                         </ol>
                         <div style="height: 10px"></div>
+                    </div>
+                </div>
+            </tab>
+            <tab select="tabSelect('profile');" active="tabs.profile">
+                <tab-heading id="profile">
+                    <span class="icon icon-wf ">&#128240;</span>
+                    Profile
+                </tab-heading>
+                <div class="loading"><p>In w<span class="rotateO"></span>rk</p></div>
+                <div>
+                    <div class="panel">
+                        {% endverbatim %}
+                        You are logged-in as <span class="username">{{ app.user.nickname }}</span>, manage your api keys and info below</a>.
+                        {% verbatim %}
                     </div>
                 </div>
             </tab>
