dayly index refreshing

--- a/src/Thumbtack/OfflinerBundle/Resources/views/Default/welcome.html.twig
+++ b/src/Thumbtack/OfflinerBundle/Resources/views/Default/welcome.html.twig
@@ -126,7 +126,7 @@
                                 <label class="btn btn-danger pull-right" ng-click="sendRequest('deleteDomain',{{domain.id}})" title="Delete">
                                     <span class="icon icon-wf icon-action">&#59177;</span>
                                 </label>
-                                <label class="btn btn-info pull-right" ng-click="sendRequest('getDomainInfo',{{domain.id}},{{ domain}})" title="Info">
+                                <label class="btn btn-info pull-right" ng-click="sendRequest('getDomainInfo',{{domain.id}},{{ domain}})" title="Staticstics (refreshs every 10 minutes)">
                                     <span class="icon icon-wf icon-action">&#128196;</span>
                                 </label>
                             </td>
