--- a/src/Thumbtack/OfflinerBundle/Resources/views/Default/welcome.html.twig
+++ b/src/Thumbtack/OfflinerBundle/Resources/views/Default/welcome.html.twig
@@ -184,6 +184,7 @@
                     <div class="panel">
                         {% endverbatim %}
                         You are logged-in as <span class="username">{{ app.user.nickname }}</span>, manage your api keys and info below</a>.
+                        Yours ApiKey =  <span class="username"> {{ user_api_key }}</span>
                         {% verbatim %}
                     </div>
                 </div>
